refactor: 에러 처리 및 예외 처리 추가
- BaseException (의도된 예외 및 에러)
- 그 이외의 에러 (의도치 않은 에러)
- try ~ catch 로 감쌈